test/test-cases/negative/if-errors.pas
program test(input, output);
var int: integer;
bol : boolean;
begin
if bol = int then
int := 1
else
int := 2
end.